--- a/docs/5023.md
+++ b/docs/5023.md
@@ -4,11 +4,13 @@ Módulo Profesional: Puesta en producción segura.
 Código: 5023.
 Créditos ECTS: 7.
 
-Resultados de aprendizaje y criterios de evaluación.
+---
 
-1. Prueba aplicaciones web y aplicaciones para dispositivos móviles analizando la estructura del código y su modelo de ejecución.
+## Resultados de aprendizaje y criterios de evaluación.
 
-Criterios de evaluación:
+### 1. Prueba aplicaciones web y aplicaciones para dispositivos móviles analizando la estructura del código y su modelo de ejecución.
+
+**Criterios de evaluación:**
 
 - a) Se han comparado diferentes lenguajes de programación de acuerdo a sus características principales.
 - b) Se han descrito los diferentes modelos de ejecución de software.
@@ -16,18 +18,18 @@ Criterios de evaluación:
 - d) Se han ejecutado diferentes tipos de prueba de software.
 - e) Se han evaluado los lenguajes de programación de acuerdo a la infraestructura de seguridad que proporcionan.
 
-2.	 Determina el nivel de seguridad requerido por aplicaciones identificando los vectores de ataque habituales y sus riesgos asociados.
+### 2.	 Determina el nivel de seguridad requerido por aplicaciones identificando los vectores de ataque habituales y sus riesgos asociados.
 
-Criterios de evaluación:
+**Criterios de evaluación:**
 
 - a)	 Se han caracterizado los niveles de verificación de seguridad en aplicaciones establecidos por los estándares internacionales (ASVS, “Application Security Verification Standard”).
 - b)	 Se ha identificado el nivel de verificación de seguridad requerido porlas aplicaciones en función de sus riesgos de acuerdo a estándares reconocidos.
 - c)	 Se han enumerado los requisitos de verificación necesarios asociados al nivel de seguridad establecido.
 - d) Se han reconocido los principales riesgos de las aplicaciones desarrolladas, en función de sus características.
 
-3. Detecta y corrige vulnerabilidades de aplicaciones web analizando su código fuente y configurando servidores web.
+### 3. Detecta y corrige vulnerabilidades de aplicaciones web analizando su código fuente y configurando servidores web.
 
-Criterios de evaluación:
+**Criterios de evaluación:**
 
 - a) Se han validado las entradas de los usuarios.
 - b) Se han detectado riesgos de inyección tanto en el servidor como en el cliente.
@@ -37,9 +39,9 @@ Criterios de evaluación:
 - f)	 Se han configurado servidores web para reducir el riesgo de sufrir ataques conocidos.
 - g) Se han incorporado medidas para evitar los ataques a contraseñas, envío masivo de mensajes o registros de usuarios a través de programas automáticos (bots).
 
-4. Detecta problemas de seguridad en las aplicaciones para dispositivos móviles, monitorizando su ejecución y analizando ficheros y datos.
+### 4. Detecta problemas de seguridad en las aplicaciones para dispositivos móviles, monitorizando su ejecución y analizando ficheros y datos.
 
-Criterios de evaluación:
+**Criterios de evaluación:**
 
 - a) Se han comparado los diferentes modelos de permisos de las plataformas móviles.
 - b) Se han descrito técnicas de almacenamiento seguro de datos en los dispositivos, para evitar la fuga de información.
@@ -47,9 +49,9 @@ Criterios de evaluación:
 - d)	 Se han utilizado herramientas de monitorización de tráfico de red para detectar el uso de protocolos inseguros de comunicación de las aplicaciones móviles.
 - e) Se han inspeccionado binarios de aplicaciones móviles para buscar fugas de información sensible.
 
-5. Implanta sistemas seguros de desplegado de software, utilizando herramientas para la automatización de la construcción de sus elementos.
+### 5. Implanta sistemas seguros de desplegado de software, utilizando herramientas para la automatización de la construcción de sus elementos.
 
-Criterios de evaluación:
+**Criterios de evaluación:**
 
 - a)	 Se han identificado las características, principios y objetivos de la integración del desarrollo y operación del software.
 - b) Se han implantado sistemas de control de versiones, administrando los roles y permisos solicitados.
@@ -59,91 +61,66 @@ Criterios de evaluación:
 - f) Se han documentado las tareas realizadas y los procedimientos a seguir para la recuperación ante desastres.
 - g) Se han creado bucles de retroalimentación ágiles entre los miembros del equipo.
 
+---
+
 Duración: 65 horas.
 
 Contenidos básicos:
 
-Prueba de aplicaciones web y para dispositivos móviles:
+## Prueba de aplicaciones web y para dispositivos móviles:
 
-−	 Fundamentos de la programación.
+**Criterios de evaluación:**
 
-−	 Lenguajes de programación interpretados y compilados.
-
-−	 Código fuente y entornos de desarrollo.
-
-−	 Ejecución de software.
-
-−	 Elementos principales de los programas.
-
-−	 Pruebas. Tipos.
-
-−	 Seguridad en los lenguajes de programación y sus entornos de ejecución (“sandboxes”).
+- Fundamentos de la programación.
+- Lenguajes de programación interpretados y compilados.
+- Código fuente y entornos de desarrollo.
+- Ejecución de software.
+- Elementos principales de los programas.
+- Pruebas. Tipos.
+- Seguridad en los lenguajes de programación y sus entornos de ejecución (“sandboxes”).
 
 Determinación del nivel de seguridad requerido por aplicaciones:
 
-−	 Fuentes abiertas para el desarrollo seguro.
-
-−	 Listas de riesgos de seguridad habituales: OWASP Top Ten (web y móvil).
-
-−	 Requisitos de verificación necesarios asociados al nivel de seguridad establecido
-
-−	 Comprobaciones de seguridad a nivel de aplicación: ASVS (Application Security Verification Standard).
+- Fuentes abiertas para el desarrollo seguro.
+- Listas de riesgos de seguridad habituales: OWASP Top Ten (web y móvil).
+- Requisitos de verificación necesarios asociados al nivel de seguridad establecido
+- Comprobaciones de seguridad a nivel de aplicación: ASVS (Application Security Verification Standard).
 
 Detección y corrección de vulnerabilidades de aplicaciones web:
 
-−	 Desarrollo seguro de aplicaciones web.
-
-−	 Listas públicas de vulnerabilidades de aplicaciones web. OWASP Top Ten.
-
-−	 Entrada basada en formularios. Inyección. Validación de la entrada.
-
-−	 Estándares de autenticación y autorización.
-
-−	 Robo de sesión.
-
-−	 Vulnerabilidades web.
-
-−	 Almacenamiento seguro de contraseñas.
-
-−	 Contramedidas. HSTS, CSP, CAPTCHAs, entre otros.
-
-−	 Seguridad de portales y aplicativos web. Soluciones WAF (Web Application Firewall).
+- Desarrollo seguro de aplicaciones web.
+- Listas públicas de vulnerabilidades de aplicaciones web. OWASP Top Ten.
+- Entrada basada en formularios. Inyección. Validación de la entrada.
+- Estándares de autenticación y autorización.
+- Robo de sesión.
+- Vulnerabilidades web.
+- Almacenamiento seguro de contraseñas.
+- Contramedidas. HSTS, CSP, CAPTCHAs, entre otros.
+- Seguridad de portales y aplicativos web. Soluciones WAF (Web Application Firewall).
 
 Detección de problemas de seguridad en aplicaciones para dispositivos móviles:
 
-−	 Modelos de permisos en plataformas móviles. 
+- Modelos de permisos en plataformas móviles. 
 
 Llamadas al sistema protegidas.
 
-−	 Firma y verificación de aplicaciones.
-
-−	 Almacenamiento seguro de datos.
-
-−	 Validación de compras integradas en la aplicación.
-
-−	 Fuga de información en los ejecutables.
-
-−	 Soluciones CASB.
+- Firma y verificación de aplicaciones.
+- Almacenamiento seguro de datos.
+- Validación de compras integradas en la aplicación.
+- Fuga de información en los ejecutables.
+- Soluciones CASB.
 
 Implantación de sistemas seguros de desplegado de software:
 
-−	 Puesta segura en producción.
-
-−	 Prácticas unificadas para el desarrollo y operación del software (DevOps).
-
-−	 Sistemas de control de versiones.
-
-−	 Sistemas de automatización de construcción (build).
-
-−	 Integración continua y automatización de pruebas.
-
-−	 Escalado de servidores. Virtualización. Contenedores.
-
-−	 Gestión automatizada de configuración de sistemas
-
-−	 Herramientas de simulación de fallos.
-
-−	 Orquestación de contenedores.
+- Puesta segura en producción.
+- Prácticas unificadas para el desarrollo y operación del software (DevOps).
+- Sistemas de control de versiones.
+- Sistemas de automatización de construcción (build).
+- Integración continua y automatización de pruebas.
+- Escalado de servidores. Virtualización. Contenedores.
+- Gestión automatizada de configuración de sistemas
+- Herramientas de simulación de fallos.
+- Orquestación de contenedores.
 
 Orientaciones pedagógicas.
 
@@ -155,14 +132,9 @@ Las actividades profesionales asociadas a esta función se aplican en el anális
 La formación del módulo contribuye a alcanzar los objetivos generales k), l), q), r), s), t), u) y v) y las competencias f), g), k), l), m), n) y ñ) del curso de especialización.
 Las líneas de actuación en el proceso de enseñanza aprendizaje que permiten alcanzar los objetivos del módulo versarán sobre:
 
-– El análisis de la estructura de aplicaciones y dispositivos móviles.
-
-– Los vectores de ataque más comunes.
-
-– El análisis del nivel de seguridad requerido por las aplicaciones.
-
-–	 La configuración de servidores web seguros.
-
-– La detección de los problemas de seguridad de las aplicaciones para los dispositivos móviles.
-
-– La implantación de sistemas seguros de desplegado de software.
+- El análisis de la estructura de aplicaciones y dispositivos móviles.
+- Los vectores de ataque más comunes.
+- El análisis del nivel de seguridad requerido por las aplicaciones.
+- La configuración de servidores web seguros.
+- La detección de los problemas de seguridad de las aplicaciones para los dispositivos móviles.
+- La implantación de sistemas seguros de desplegado de software.
