--- a/docs/5026.md
+++ b/docs/5026.md
@@ -4,12 +4,14 @@ Módulo Profesional: Normativa de ciberseguridad.
 Código: 5026.
 Créditos ECTS: 3.
 
-Resultados de aprendizaje y criterios de evaluación.
+---
 
-1.	 Identifica los puntos principales de aplicación para asegurar el cumplimiento normativo
+## Resultados de aprendizaje y criterios de evaluación.
+
+### 1.	 Identifica los puntos principales de aplicación para asegurar el cumplimiento normativo
 reconociendo funciones y responsabilidades.
 
-Criterios de evaluación:
+**Criterios de evaluación:**
 
 - a)	 Se han identificado las bases del cumplimiento normativo a tener en cuenta en las organizaciones.
 - b) Se han descrito y aplicado los principios de un buen gobierno y su relación con la ética profesional.
@@ -17,27 +19,27 @@ Criterios de evaluación:
 - d) Se han descrito las funciones o competencias del responsable del cumplimiento normativo dentro de las organizaciones.
 - e) Se han establecido las relaciones con terceros para un correcto cumplimiento normativo.
 
-2. Diseña sistemas de cumplimiento normativo seleccionando la legislación y jurisprudencia de aplicación.
+### 2. Diseña sistemas de cumplimiento normativo seleccionando la legislación y jurisprudencia de aplicación.
 
-Criterios de evaluación:
+**Criterios de evaluación:**
 
 - a) Se han recogido las principales normativas que afectan a los diferentes tipos de organizaciones.
 - b) Se han establecido las recomendaciones válidas para diferentes tipos de organizaciones de acuerdo con la normativa vigente (ISO 19.600 entre otras).
 - c) Se han realizado análisis y evaluaciones de los riesgos de diferentes tipos de organizaciones de acuerdo con la normativa vigente (ISO 31.000 entre otras).
 - d) Se ha documentado el sistema de cumplimiento normativo diseñado.
 
-3. Relaciona la normativa relevante para el cumplimiento de la responsabilidad penal de las organizaciones y personas jurídicas con los procedimientos establecidos, recopilando y aplicando las normas vigentes.
+### 3. Relaciona la normativa relevante para el cumplimiento de la responsabilidad penal de las organizaciones y personas jurídicas con los procedimientos establecidos, recopilando y aplicando las normas vigentes.
 
-Criterios de evaluación:
+**Criterios de evaluación:**
 
 - a)	 Se han identificado los riesgos penales aplicables a diferentes organizaciones.
 - b) Se han implantado las medidas necesarias para eliminar o minimizar los riesgos identificados.
 - c) Se ha establecido un sistema de gestión de cumplimiento normativo penal de acuerdo con la legislación y normativa vigente (Código Penal y UNE 19.601, entre otros).
 - d) Se han determinado los principios básicos dentro de las organizaciones para combatir el soborno y promover una cultura empresarial ética de acuerdo con la legislación y normativa vigente (ISO 37.001 entre otros).
 
-4. Aplica la legislación nacional de protección de datos de carácter personal, relacionando los procedimientos establecidos con las leyes vigentes y con la jurisprudencia existente sobre la materia.
+### 4. Aplica la legislación nacional de protección de datos de carácter personal, relacionando los procedimientos establecidos con las leyes vigentes y con la jurisprudencia existente sobre la materia.
 
-Criterios de evaluación:
+**Criterios de evaluación:**
 
 - a) Se han reconocido las fuentes del Derecho de acuerdo con el ordenamiento jurídico en materia de protección de datos de carácter personal.
 - b) Se han aplicado los principios relacionados con la protección de datos de carácter personal tanto a nivel nacional como internacional.
@@ -47,9 +49,9 @@ Criterios de evaluación:
 - f) Se han implantado las medidas necesarias para eliminar o minimizar los riesgos identificados en la protección de datos.
 - g) Se han descrito las funciones o competencias del delegado de protección de datos dentro de las organizaciones.
 
-5. Recopila y aplica la normativa vigente de ciberseguridad de ámbito nacional e internacional, actualizando los procedimientos establecidos de acuerdo con las leyes y con la jurisprudencia existente sobre la materia.
+### 5. Recopila y aplica la normativa vigente de ciberseguridad de ámbito nacional e internacional, actualizando los procedimientos establecidos de acuerdo con las leyes y con la jurisprudencia existente sobre la materia.
 
-Criterios de evaluación:
+**Criterios de evaluación:**
 
 - a)	 Se ha establecido el plan de revisiones de la normativa, jurisprudencia, notificaciones, etc. jurídicas que puedan afectar a la organización.
 - b) Se ha detectado nueva normativa consultando las bases de datos jurídicas siguiendo el plan de revisiones establecido.
@@ -57,67 +59,53 @@ Criterios de evaluación:
 - d)	 Se ha incluido en el plan de revisiones las modificaciones necesarias, sobre la nueva normativa aplicable a la organización, para un correcto cumplimiento normativo.
 - e) Se han determinado e implementado los controles necesarios para garantizar el correcto cumplimiento normativo de las nuevas normativas. incluidas en el plan de revisiones.
 
+---
+
 Duración: 30 horas.
 
-Contenidos básicos:
+## Contenidos básicos:
 
 Puntos principales de aplicación para un correcto cumplimiento normativo:
 
-−	 Introducción al cumplimiento normativo (Compliance: objetivo, definición y conceptos principales).
-
-−	 Principios del buen gobierno y ética empresarial.
-
-−	 Compliance Officer: funciones y responsabilidades.
-
-−	 Relaciones con terceras partes dentro del Compliance.
+- Introducción al cumplimiento normativo (Compliance: objetivo, definición y conceptos principales).
+- Principios del buen gobierno y ética empresarial.
+- Compliance Officer: funciones y responsabilidades.
+- Relaciones con terceras partes dentro del Compliance.
 
 Diseño de sistemas de cumplimiento normativo:
 
-−	 Sistemas de Gestión de Compliance.
-
-−	 Entorno regulatorio de aplicación.
-
-−	 Análisis y gestión de riesgos, mapas de riesgos.
-
-−	 Documentación del sistema de cumplimiento normativo diseñado.
+- Sistemas de Gestión de Compliance.
+- Entorno regulatorio de aplicación.
+- Análisis y gestión de riesgos, mapas de riesgos.
+- Documentación del sistema de cumplimiento normativo diseñado.
 
 Legislación para el cumplimiento de la responsabilidad penal:
 
-−	 Riesgos penales que afectan a la organización.
-
-−	 Sistemas de gestión de Compliance penal.
-
-−	 Sistemas de gestión anticorrupción.
+- Riesgos penales que afectan a la organización.
+- Sistemas de gestión de Compliance penal.
+- Sistemas de gestión anticorrupción.
 
 Legislación y jurisprudencia en materia de protección de datos:
 
-−	 Principios de protección de datos.
-
-−	 Novedades del RGPD de la Unión Europea.
-
-−	 Privacidad por Diseño y por Defecto.
-
-−	 Análisis de Impacto en Privacidad (PIA), y medidas de seguridad.
-
-−	 Delegado de Protección de Datos (DPO).
+- Principios de protección de datos.
+- Novedades del RGPD de la Unión Europea.
+- Privacidad por Diseño y por Defecto.
+- Análisis de Impacto en Privacidad (PIA), y medidas de seguridad.
+- Delegado de Protección de Datos (DPO).
 
 Normativa vigente de ciberseguridad de ámbito nacional e internacional:
 
-−	 Normas nacionales e internacionales.
-
-−	 Sistema de Gestión de Seguridad de la Información (estándares internacionales) (ISO 27.001).
-
-−	 Acceso electrónico de los ciudadanos a los Servicios Públicos.
+- Normas nacionales e internacionales.
+- Sistema de Gestión de Seguridad de la Información (estándares internacionales) (ISO 27.001).
+- Acceso electrónico de los ciudadanos a los Servicios Públicos.
 
 Esquema Nacional de Seguridad (ENS).
 
-−	 Planes de Continuidad de Negocio (estándares internacionales) (ISO 22.301).
+- Planes de Continuidad de Negocio (estándares internacionales) (ISO 22.301).
+- Directiva NIS.
+- Legislación sobre la protección de infraestructuras críticas. Ley PIC (Protección de infraestructuras críticas).
 
-−	 Directiva NIS.
-
-−	 Legislación sobre la protección de infraestructuras críticas. Ley PIC (Protección de infraestructuras críticas).
-
-Orientaciones pedagógicas.
+## Orientaciones pedagógicas.
 
 Este módulo profesional contiene la formación necesaria para desempeñar la función de diseñar el sistema de cumplimiento normativo de ciberseguridad en una organización.
 
@@ -129,14 +117,9 @@ La formación del módulo contribuye a alcanzar los objetivos generales o), p), 
 
 Las líneas de actuación en el proceso de enseñanza aprendizaje que permiten alcanzar los objetivos del módulo versarán sobre:
 
-–	 La identificación de los cambios de la normativa de ciberseguridad, tanto nacional como internacional, que afectan a la organización.
-
-– La elaboración de mapas de riesgos.
-
-– La elaboración de materiales de formación y concienciación como presentaciones, guías, etc.
-
-– La investigación de incidentes de ciberseguridad.
-
-– La legislación y jurisprudencia en materia de protección de datos de carácter personal.
-
-–	 La notificación, tanto interna como externa de los incidentes detectados.
+- La identificación de los cambios de la normativa de ciberseguridad, tanto nacional como internacional, que afectan a la organización.
+- La elaboración de mapas de riesgos.
+- La elaboración de materiales de formación y concienciación como presentaciones, guías, etc.
+- La investigación de incidentes de ciberseguridad.
+- La legislación y jurisprudencia en materia de protección de datos de carácter personal.
+- La notificación, tanto interna como externa de los incidentes detectados.
